--- a/desenvolvimento/sobre.html
+++ b/desenvolvimento/sobre.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <div id ="menu">
-            <h1>Lucas</h1>
+            <h1> <a href="home.html" class="nome ">Lucas</a></h1>
             <ul>
                 <li><a href="softskills.html">Soft Skills</a></li>
                 <li><a href="projetos.html">Projetos</a></li>
@@ -28,6 +28,13 @@
                 tenho conhecimento e HTML, CSS e JAVA SCRIPT para area de Front, mas também tenho familiaridade com PYTHON para programação BACK END 
             </span>
         </div>
+    </div>
+
+    <div >
+        <img src="imagens/javascript.png" alt="" class="linguagens" >
+        <img src="imagens/html.png" alt="" class="linguagens" >
+        <img src="imagens/css-3.svg" alt="" class="linguagens" >
+        <img src="imagens/Python_logo_01.svg.png" alt="" class="linguagens" >
     </div>
 
     <div class="rodape2">
