--- a/desenvolvimento/projetos.html
+++ b/desenvolvimento/projetos.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <div id ="menu">
-            <h1>Lucas</h1>
+            <h1> <a href="home.html" class="nome ">Lucas</a></h1>
             <ul>
                 <li><a href="softskills.html">Soft Skills</a></li>
                 <li id="atual"><a href="projetos.html">Projetos</a></li>
