--- a/desenvolvimento/softskills.html
+++ b/desenvolvimento/softskills.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato</title>
+    <title>Soft Skills</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
         <div id ="menu">
-            <h1>Lucas</h1>
+            <h1> <a href="home.html" class="nome ">Lucas</a></h1>
             <ul>
                 <li id="atual"><a href="softskills.html">Soft Skills</a></li>
                 <li><a href="projetos.html">Projetos</a></li>
